# Lab-more-project-ibfork-

./: .coverage  .flake8  .gitignore  README.md  chat.py  pyproject.toml
.github/workflows/: doctests.yml  flake8.yml  integration-tests.yml
tests/: test_chat.py  test_cli.py  test_integration.py  test_llm.py  test_tools.py
tools/: __init__.py  calculate.py  cat.py  compact.py  grep.py  ls.py
