[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci40-mia"                 # your PyPI package name
version = "0.1.0"
description = "Simple text summarization using an LLM"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mia U", email = "your-email@example.com"}]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["docsum_pkg"]